# StudioDiffusion

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt  requirements_no_sam2.txt  test_clip_eval.py
adapters/: __init__.py
configs/: base.yaml
data/: README.md  curate_platform.py  download_abo.sh  download_deepfashion2.sh  download_laion.sh  fetch_abo.py  generate_captions.py  preprocess_abo.py  preprocess_deepfashion2.py
docs/: adapter-pipeline-overview.md  apple-silicon-training-handoff.md  data-setup.md  data-work-summary.md  ip-adapter-training-report.md  team-data-pipeline-handoff.md
evaluation/: __init__.py  aesthetic_scoring.py  boundary_preservation.py  clip_alignment.py  clip_diversity.py  dinov2_fidelity.py  fid.py
inference/: __init__.py  generate.py  inpaint_composite.py  smoke.py
notebooks/: 01_data_exploration.ipynb  02_segmentation_eval.ipynb  03_results_analysis.ipynb
results/: final_eval_metrics.csv  final_eval_metrics.json  final_eval_metrics_local_env.csv  final_eval_metrics_local_env.json  ip_adapter_ebay_overfit.json  ip_adapter_etsy_overfit.json  ip_adapter_shopify_overfit.json  sd19_sd21_status.md  sd21_final_summary.md  sd21_ip_adapter_final_eval_metrics.csv  sd21_ip_adapter_final_eval_metrics.json  sd21_ip_adapter_overfitting_summary.json  sd30_category_coverage.csv  sd30_clean_split_table.csv  sd30_figure_manifest.csv  sd30_final_eval_metrics.csv  sd30_generation_summary.csv  sd30_metric_reproducibility.csv  sd30_overfit_summary.csv  sd30_report_section.md  sd30_results_tables.md  sd30_run_settings_table.csv
(+64 files in other folders)
